docs/assets/css/style.css
html, body{
  height: 100%;
  margin: 0;
  display: flex;
  flex-direction: column;
  height: fit-content;
  /* border: 3px solid blue; */
}

body {
  justify-content: center;
  /* min-height: 100vh; */
  padding: 0;
  background-color: #f8f9fa !important;
  color: #212529 !important;
  font-family: 'Courier New', 'Courier', 'Lucida Sans Typewriter', 'Lucida Typewriter', monospace;
}

footer {
  width: 100%;
  /* background-color: #f8f9fa;
  color: #212529; */
  padding: 20px;
  box-sizing: border-box;
  position: relative;
  bottom: 0;
  clear: both;
  text-align: left;
  font-size: 0.75em;
}

#canvas-logo {
  width: 500px;
  height: 300px;
  margin: auto;
  border: 0px;
  padding: 0;
}

#logo{
  width: 500px;
  height: 300px;
}

#header-bio, #header-proj, #header-sols, #header-contact{
  width: 500px;
  height: 100px;
}

#canvas-img {
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  /* min-height: 100%; */
  z-index: -1;
  /* border: 3px solid green; */
}

#page-header {
  margin: auto;
  padding: 100px 0 0 0;
  width: 500px;
  height: 410px;
  min-height: 0;
}

.main-frame-container{
  position: relative;
  display: flex;
  flex-direction: column;
  flex: 1;
  margin: auto;
  width: 100%;
  max-width: 2560px;
  min-height: 100vh;
  padding: 0;
}

.main-frame {
  flex: 1;
  width: 100%;
}

.spacer {
    flex: 1;
    min-height: 100px;
    max-height: 1000px;
    /* transition-duration: 1s; */
}

/* ===== Navigation bar ====== */

ul.nav {
  display: flex;
  justify-content: center;
  list-style-type: none;
  margin: 0;
  padding: 0;
  overflow: hidden;
  /* border: 3px solid green; */
}

ul.nav li {
  float: none;
  margin: 0;
  padding: 0;
}

ul.nav li a {
  display: block;
  color: #f8f9fa !important;
  text-align: center;
  padding: 0;
  text-decoration: none;
}

.nav-item {
  position: relative;
  display: inline-block;
}

.nav-item img {
  display: block;
  transition: opacity 0.5s ease;
  position: absolute;
  top: 0;
  left: 0;
}

.nav-item img.first {
  opacity: 1;
  position: relative; /* keep in front initially */
  z-index: 1;
}

.nav-item img.second {
  opacity: 0;
  z-index: 2;
}

.nav-item:hover img.first {
  opacity: 0;
}

.nav-item:hover img.second {
  opacity: 1;
}

button {
  transition-duration: 0.5s;
}

.nav-button {
  width: 100px;
  height: 100px;
  background-size: cover;
  background-color: #f8f9fa !important;
  border: none;
  cursor: pointer;
}

#button-home {
  background-image: url("../buttons/button-home.png");
}

#button-home:hover {
  background-image: url("../buttons/button-home-active.png");
}

#button-bio {
  background-image: url("../buttons/button-bio.png");
}

#button-bio:hover {
  background-image: url("../buttons/button-bio-active.png");
}

#button-proj {
  background-image: url("../buttons/button-proj.png");
}

#button-proj:hover {
  background-image: url("../buttons/button-proj-active.png");
}

#button-sols {
  background-image: url("../buttons/button-sols.png");
}

#button-sols:hover {
  background-image: url("../buttons/button-sols-active.png");
}

#button-contact {
  background-image: url("../buttons/button-contact.png");
}

#button-contact:hover {
  background-image: url("../buttons/button-contact-active.png");
}

#toggle-legal {
  font-family: inherit;
  font-size: 1em;
  color: #0D7C82 !important;
  background-color: #f8f9fa !important;
  border: 0;
  cursor: pointer;
}

button.internal-link {
  font-family: inherit;
  font-size: inherit;
  background: none;
  border: 0;
  cursor: pointer;
}

/* ===== Text content ===== */

.overlay-text-container {
  flex: 1;
  display: flex;
  flex-direction: column;
  margin: auto;
  position: relative;
  top: 0px;
  left: 0px;
  width: 100%;
  justify-content: center;
  align-items: center;
  flex: 1;
  overflow-y: auto;
  padding-bottom: 250px;
  /* border: 3px solid green; */
  transition-duration: 1s;
}

.overlay-text {
  flex: 1;
  background-color: #f8f9fae7 !important;
  font-size: 1em;
  width: 480px;
  padding: 25px;
  min-width: unset;
  max-width: 600px;
  /* border: 3px solid green; */
  transition-duration: 1s;
}

ul li {
  padding: 10px 0px;
}

b {
  color:#0D7C82 !important;
}

a {
  color:#0D7C82 !important;
}

a:visited {
  color:#0D7C82 !important;
}

a:hover {
  color:#0D7C82 !important;
}

a:active {
  color:#59A399 !important;
}

#legal {
  margin: 0;
  column-count: 2;
}

/* ===== Project filters ===== */
.projButton {
  float: left;
  background-color: #f8f9fae7 !important;
  font-size: 15px;
  text-align: left;
  margin: 2px;
  display: none;
  padding: 5px;
  border: 1px solid #212529 !important;
  border-radius: 5px;
  cursor: pointer;
}

.projButton:hover {
  background-color: #495057 !important;
  color: #f8f9fa !important;
}

.show {
  display: block;
}

#filter-button-container{
  padding: 0px 0px 25px 0px;
  display: flex;
  width: 500px;
  flex-direction: row;
  z-index: 2000;
}

.filter-items-container {
  margin: auto;
  width: 100%;
  height: fit-content;
}

/* Lets container scale around buttons */
.filter-items-container::after {
  content: "";
  display: table;
  clear: both;
}

.filter-btn {
  border: none;
  outline: none;
  padding: 8px 0px 8px 0px;
  font-size: 15px;
  background-color: #f8f9fa !important;
  cursor: pointer;
  z-index: 2000;
}

.filter-btn:hover {
  background-color: #0D7C82 !important;
  color: #f8f9fa !important;
}

.filter-btn.active {
  background-color: #59A399 !important;
  color: #f8f9fa !important;
}

.dropbtn {
  background-color: #59A399 !important;
  color: #f8f9fa !important;
  width: 118px;
  margin: 1px;
  padding: 8px;
  font-size: 15px;
  border: none;
  cursor: pointer;
}

.projButton,
.filter-btn,
.dropbtn,
#showall {
    font-family: inherit;
}

.dropdown {
  position: relative;
  display: inline-block;
}

.dropdown-filters {
  display: none;
  flex-direction: column;
  width: 100%;
  position: absolute;
  background-color: #f8f9fa !important;
  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
}

.dropdown:hover .dropdown-filters {
  display: flex;
}

.dropbtn:hover {
  background-color: #0D7C82 !important;
}

#showall {
  float:right;
  font-size: 15px;
  color: #495057 !important;
  background-color: #f8f9fa !important;
  border: 1px solid #f8f9fa !important;
  cursor: pointer;
}

#showall:hover {
  border-color: #495057 !important;
}

/* ===== Standard page images ===== */
figure {
  margin: 0;
}

.page-img {
  max-width: 100%;
  margin: 10px 0 20px 0;
}

/* ===== Breakout images ===== */
.image-breakout {
  position: absolute;
  width: calc((100% - 580px - 10vw) / 2); /* or your desired width */
  max-width: 220px;
  border: 2px solid #f8f9fa !important;
  transition: 0.3s;
  object-fit: contain;
}

.image-breakout.left {
  left: 5vw; /* push the image into the left void */
}

.image-breakout.right {
  right: 5vw; /* push the image into the left void */
}

.image-breakout img {
  width: 100%;
  height: auto;
  display: block;
}

.image-breakout.maximized {
  position: fixed !important;
  top: 50% !important;
  left: 50% !important;
  width: auto !important;
  max-width: calc(100% - 2vw) !important;
  max-height: calc(100% - 2vw) !important;
  transform: translate(-50%, -50%);
  z-index: 1000; /* Ensure it’s above other content */
}

/* Add padding to the container where the image would be,
   so text doesn't overlap the image's original space. */
.image-breakout + p {
  padding-top: 20px;
}

/* ===== Responsive design ===== */
@media screen and (max-width: 500px) {
  #page-header {
    width: 320px;
    height: 262px;
  }
  #filter-button-container{
    width: 320px;
  }
  .overlay-text {
    width: 300px;
  }
  #canvas-logo {
    width: 320px;
    height: 192px;
  }
  .nav-button {
    width: 64px;
    height: 64px;
  }
  .dropbtn {
    width: 76px;
    font-size: 11px;
    padding: 4px 2px 4px 2px;
  }
  #showall {
    font-size: 11px;
  }
  .filter-btn {
    font-size: 11px;
  }
  .image-breakout {
    position: static;
    left: 0;
    width: 100%;
    max-width: 100%;
    /* margin-bottom: 10px; */
  }
}

/* ===== Hydra ===== */
.hydra-canvas {
  width: 100%;
}

